# c_variant_generator

./: generate_program.sh  index.ts  meson.build  package.json
meson_helper/: config.h.in  generate_wrapper.c  todo.txt
src/: base.ts  data.ts  generate.c  generate.h  json.c  json.h  main.c  meson.build  utils.h  utils.ts  variants.ts
subprojects/: c_variant_generator.wrap  tjson.wrap  utf8proc.wrap
